--- a/apocalypsis-zombie.ipynb
+++ b/apocalypsis-zombie.ipynb
@@ -22,9 +22,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola','escopeta']\n",
     "\n",
@@ -32,8 +40,11 @@
     "    'pistola': [10, 10], \n",
     "    'escopeta': [2, 2, 2, 2, 2]\n",
     "}\n",
-    "\n",
-    "# your code\n"
+    "balas = []\n",
+    "for i in cargadores.values():\n",
+    "    for j in i:\n",
+    "        balas.append(j)\n",
+    "print(sum(balas))"
    ]
   },
   {
@@ -52,9 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "158\n"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola', 'ametralladora', 'escopeta', 'fusil de francotirador']\n",
     "\n",
@@ -65,7 +84,11 @@
     "    'fusil de francotirador': [1, 2, 4]\n",
     "}\n",
     "\n",
-    "# your code\n"
+    "balas_2 = []\n",
+    "for i in cargadores.values():\n",
+    "    for j in i:\n",
+    "        balas_2.append(j)\n",
+    "print(sum(balas_2))"
    ]
   },
   {
@@ -77,9 +100,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'dict_values' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-52b96e478555>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# your code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mbalas_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcargadores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mbalas_3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'dict_values' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola', 'ametralladora', 'escopeta', 'fusil de francotirador']\n",
     "\n",
@@ -91,7 +126,12 @@
     "    'bazoka': [1, 1]\n",
     "}\n",
     "\n",
-    "# your code\n"
+    "# your code\n",
+    "balas_3 = []\n",
+    "for i in cargadores.values()[0:4]:\n",
+    "    for j in i:\n",
+    "        balas_3.append(j)\n",
+    "print(balas_3)"
    ]
   },
   {
@@ -135,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
