--- a/apocalypsis-zombie.ipynb
+++ b/apocalypsis-zombie.ipynb
@@ -104,14 +104,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'dict_values' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-52b96e478555>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# your code\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0mbalas_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcargadores\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0mbalas_3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'dict_values' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "158\n"
      ]
     }
    ],
@@ -128,10 +124,14 @@
     "\n",
     "# your code\n",
     "balas_3 = []\n",
-    "for i in cargadores.values()[0:4]:\n",
+    "municion_total = []\n",
+    "for i in cargadores.values():\n",
+    "    municion_total.append(i)\n",
+    "del municion_total[4]\n",
+    "for i in municion_total:\n",
     "    for j in i:\n",
     "        balas_3.append(j)\n",
-    "print(balas_3)"
+    "print(sum(balas_3))"
    ]
   },
   {
@@ -143,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "151\n"
+     ]
+    }
+   ],
    "source": [
     "armas = ['pistola', 'ametralladora', 'escopeta', 'fusil de francotirador']\n",
     "\n",
@@ -155,8 +163,19 @@
     "    'escopeta': [2, 2, 2, 1] \n",
     "}\n",
     "\n",
-    "# your code\n"
+    "balas_4 = []\n",
+    "for i in cargadores.values():\n",
+    "    for j in i:\n",
+    "        balas_4.append(j)\n",
+    "print(sum(balas_4))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
